// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - Generic keywords test annotations 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Match anything
    </strong>
  </summary>
</details>
`;

exports[`JSONSchemaViewer - Generic keywords test const 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    object
  </span>
  <ul>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            country
          </strong>
           
          <span>
            string
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        >
          <div>
            <strong>
              Constant value :
            </strong>
             
            <code>
              United States of America
            </code>
          </div>
        </div>
      </details>
    </li>
  </ul>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  />
</details>
`;

exports[`JSONSchemaViewer - Generic keywords test enum 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    string
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      <strong>
        Possible values :
      </strong>
       
      <code>
        ["red","amber","green"]
      </code>
    </div>
  </div>
</details>
`;
